# arke-core

./: .gitignore  CMakeLists.txt
Sources/dependency/: Dependency.cxx  Dependency.hxx  DependencyBuilder.cxx  DependencyBuilder.hxx  DependencyDecoder.cxx  DependencyDecoder.hxx  DependencyEncoder.cxx  DependencyEncoder.hxx
Sources/designation/: Designation.cxx  Designation.hxx  DesignationBuilder.cxx  DesignationBuilder.hxx  DesignationDecoder.cxx  DesignationDecoder.hxx  DesignationEncoder.cxx  DesignationEncoder.hxx
Sources/json/: JSONDecoder.hxx  JSONEncoder.hxx
Tests/: Dependency_test.cxx  Designation_test.cxx  main.cxx
